--- a/src/lib/global.scss
+++ b/src/lib/global.scss
@@ -1,14 +1,65 @@
-h1, h2, h3, h4, h5, h6, p, figcaption {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+figcaption {
 	font-family: 'Open sans';
 }
 
-[data-highlighted-line] {
-	background-color: #ffee004f;
+
+
+
+
+div[data-rehype-pretty-code-fragment] {
+	overflow: hidden;
+	// line-height: 0.8em;
+	border-radius: 8px;
+	background-color: rgb(22, 31, 40);
+
+	span[data-line] {
+		padding-left: 1.0em;
+	}
+
+	span[data-highlighted-line] {
+		background-color: #ffee004f;
+	}
+
+	span[data-highlighted-chars] {
+		background-color: #5eff004d;
+	}
+
+	code {
+		counter-reset: line;
+	}
+
+	code[data-line-numbers]>[data-line]::before {
+		counter-increment: line;
+		content: counter(line);
+
+		/* Other styling */
+		display: inline-block;
+		width: 1rem;
+		margin-right: 1.2rem;
+		text-align: right;
+		color: rgb(169, 169, 169);
+	}
+
+	code[data-line-numbers-max-digits='1']>[data-line]::before {
+		width: 1rem;
+	}
+
+	code[data-line-numbers-max-digits='2']>[data-line]::before {
+		width: 2rem;
+	}
+
+	code[data-line-numbers-max-digits='3']>[data-line]::before {
+		width: 3rem;
+	}
 }
 
-[data-highlighted-chars] {
-	background-color: #5eff004d;
-}
 
 code {
 	font-family: 'Hack';
