--- a/src/lib/global.scss
+++ b/src/lib/global.scss
@@ -35,6 +35,10 @@ div[data-rehype-pretty-code-fragment] {
 		counter-reset: line;
 	}
 
+	code[data-line-numbers]>span[data-line] {
+		padding-left: 0.4em;
+	}
+
 	code[data-line-numbers]>[data-line]::before {
 		counter-increment: line;
 		content: counter(line);
@@ -42,7 +46,7 @@ div[data-rehype-pretty-code-fragment] {
 		/* Other styling */
 		display: inline-block;
 		width: 1rem;
-		margin-right: 1.2rem;
+		margin-right: 0.9rem;
 		text-align: right;
 		color: rgb(169, 169, 169);
 	}
