--- a/src/lib/global.scss
+++ b/src/lib/global.scss
@@ -19,6 +19,15 @@ div[data-rehype-pretty-code-fragment] {
 	border-radius: 8px;
 	background-color: rgb(22, 31, 40);
 
+	div[data-rehype-pretty-code-title] {
+		background-color: black;
+		color: aliceblue;
+		text-align: right;
+		font-family: "Hack";
+		padding-right: 1em;
+		font-size: 0.9em;
+	}
+
 	span[data-line] {
 		padding-left: 1.0em;
 	}
